--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
+.env
+
 config/initializers/secret_token.rb
 config/secrets.yml
 
@@ -42,6 +44,5 @@ bower.json
 
 /coverage
 
-/.env
 
 /rootkey.csv
